--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
+	<scm>
+		<developerConnection>scm:git:git@github.com:ShaiEdri/spring-pet-clinic.git</developerConnection>
+	</scm>
 </project>
