--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,21 @@
 		</plugins>
 	</build>
 
-
+<reporting>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-report-plugin</artifactId>
+			<version>3.0.0-M5</version>
+		</plugin>
+	</plugins>
+</reporting>
+<!--	PhpStorm 2020.1.3-->
+<!--	Build #PS-201.8538.41, built on July 8, 2020-->
+<!--	Runtime version: 11.0.7+10-b765.64 amd64-->
+<!--	VM: OpenJDK 64-Bit Server VM by JetBrains s.r.o.-->
+<!--	Linux 5.4.0-40-generic-->
+<!--	Current Desktop: ubuntu:GNOME-->
 
 <!--	<build>-->
 <!--		<plugins>-->
